# recipe-app-api

./: DockerFile  Dockerfile  docker-compose.yml
.github/workflows/: checks.yml
app/: main.py  pyproject.toml
app/app/: calc.py  settings.py  tests.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_auto_20230917_1011.py  0004_auto_20230917_1553.py  0005_recipe_image.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/recipe/: serializers.py  urls.py  views.py
app/recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
docs/: deployment.md  docker-commands.md
proxy/: default.conf.tpl  run.sh
